Your commit message

--- a/index1.html
+++ b/index1.html
@@ -1,37 +1,38 @@
-<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Groceries Delivery</title>
+    <title>Make wibesite with Tailwind css</title>
     <link rel="stylesheet" href="style.css"/>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover px-28 relative flex flex-col justify-between">
-        <nav class="flex items-center justify-between">
+    <div class="container min-h-screen bg-[url('/images/image.png')] bg-center bg-cover px-28 pyn-5 relative">
+        <nav class="flex items-center">
             <img src="images/logo.png">
-            <ul class="flex space-x-5">
-                <li><a href="#" class="text-white">Home</a></li>
-                <li><a href="#" class="text-white">About</a></li>
-                <li><a href="#" class="text-white">Features</a></li>
-                <li><a href="#" class="text-white">Contact</a></li>
-            </ul>
+        <ul>
+            <li class="list-none inline-block px-5"><a href="#" class="no-underline text-white px-2">Home</a></li>
+            <li class="list-none inline-block px-5"><a href="#" class="no-underline text-white px-2">About</a></li>
+            <li class="list-none inline-block px-5"><a href="#" class="no-underline text-white px-2">Features</a></li>
+            <li class="list-none inline-block px-5"><a href="#" class="no-underline text-white px-2">Contact</a></li>
+        </ul>
             <img src="images/cart.png">
         </nav>
-        <div class="text-white mt-10 max-w-xl">
-            <h1 class="text-6xl font-semibold leading-tight">Groceries<br>delivery in 15 mins</h1>
-            <p class="mt-4 font-light">Grocity offers a range of products, including fresh produce, meats, dairy, baked goods, and non-perishable items.</p>
-            <div class="mt-10 flex space-x-4">
-                <a href="#" class="bg-yellow-300 rounded-3xl py-3 px-8 font-medium hover:bg-transparent hover:border-yellow-300 hover:text-white duration-300 border border-transparent">Order Now</a>
-                <a href="#" class="text-lg">Download App &#10148;</a>
+        <div class="text-white mt-48 mx-w-xl">
+            <h1 class="text-6xl font-semibold leading-normal">Groceries<br>delevery in 15 mins</h1>
+            <span class="font-light">15 mins</span>
+            <p>Grocity offer a range of produces,including fresh products,meats
+                dairy, baked goods and non-pershable items.</p>
+
+            <div class="mt-10">
+                <a href="#" class="bg-yellow-300 rounded-3xl py-3 px-8 font-medium
+                inline-block mr-4 hover:bg-transparent hover:border-yellow-300 hover:text-white duration-300 hover:border border border-transparent">Order Now</a>
+                <a href="#">Dowload App <span class="text-lg inline-block rotate-90">& #10148;</span></a>
             </div>
         </div>
-        <div class="flex justify-center">
-            <img src="images/grocery-image.png" class="w-full xl:w-1/2">
-        </div>
+        <img src="images/grocery-image.png" class="w-full xl:w-1/2 xl:absolute bottom-0 right-20">
     </div>
+
 </body>
-</html>
-
-
+</html
